[package]
name = "raytracing_series"
version = "0.3.7"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
image = "0.25"
pixels = "0.13"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
tao = { version = "0.28", features = ["rwh_05"] }

