[package]
name = "raytracing_series"
version = "0.2.4"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
rand_chacha = "0.3"
image = "0.25"
rayon = "1"
