[package]
name = "raytracing_series"
version = "0.4.0"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
image = "0.25"
pixels = "0.15"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
winit = { version = "0.30" }

